fixed line on right on mobile

--- a/src/components/common/svgs/gajologomobile.css
+++ b/src/components/common/svgs/gajologomobile.css
@@ -1,9 +1,8 @@
 .GajoLogoMobile {
-    width: 40%;
-    position: relative;
-    right: 10%;
-    height: auto;
-    margin-left: -1%;
-    /* margin-bottom: 13%; */
-  }
-  
+  width: 40%;
+  position: relative;
+  right: 10%;
+  height: auto;
+  /* margin-left: -1%; */
+  /* margin-bottom: 13%; */
+}
